--- a/siereweb/web/modulos/consulta/pcs/ctn/panelRegistroLlamada.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/ctn/panelRegistroLlamada.xhtml
@@ -74,7 +74,7 @@ JAOR - CORREGIR LISTA EN COTIZACION SOLO SALEN 20 REGISTROS MAXIMOS
                                 </div>
                             </td>
                             <td >   <div >
-                                    <label> <h:outputText value="Alias"  
+                                    <label> <h:outputText value="Nombre comercial"  
                                                           rendered="#{pcsCotizacionJSFBean.esNit}"/></label>
                                 </div>
                             </td>
