--- a/siereweb/web/modulos/param/clt/leftCliente.xhtml
+++ b/siereweb/web/modulos/param/clt/leftCliente.xhtml
@@ -24,7 +24,16 @@ and open the template in the editor.
                         <f:attribute name="jsfBean" value="clienteJSFBean"/>
                         <f:attribute name="numPanel" value="1"/>
                     </h:commandLink>
-                       <h:commandLink id="btnNavCargo"
+
+                    <h:commandLink id="btnNavDetCln"
+                                   immediate="true"
+                                   value="Detalle cliente"
+                                   actionListener="#{clienteJSFBean.navegacionLateral_ActionEvent}"
+                                   styleClass="#{clienteJSFBean.numPanel == 3 ? 'btnNavLateralSel' : 'btnNavLateral'}">
+                        <f:attribute name="jsfBean" value="clienteJSFBean"/>
+                        <f:attribute name="numPanel" value="3"/>
+                    </h:commandLink>
+                    <h:commandLink id="btnNavCargo"
                                    immediate="true"
                                    value="Cargo contacto"
                                    actionListener="#{clienteJSFBean.navegacionLateral_ActionEvent}"
