--- a/siereweb/web/modulos/param/usr/admUsuario.xhtml
+++ b/siereweb/web/modulos/param/usr/admUsuario.xhtml
@@ -13,10 +13,13 @@ and open the template in the editor.
       xmlns:ace="http://www.icefaces.org/icefaces/components"
       xmlns:ice="http://www.icesoft.com/icefaces/component">
     <ui:composition template="/principal/templateGreen.xhtml">
+
         <ui:define name="top">
+
+        </ui:define>
+        <ui:define name="cabTop">
             <ui:include src="panelAccUsuario.xhtml"/>
         </ui:define>
-
         <ui:define name="left">
             <ui:include src="leftUsuario.xhtml"/>
         </ui:define>
