--- a/siereweb/web/modulos/param/usr/panelCrgXUsr.xhtml
+++ b/siereweb/web/modulos/param/usr/panelCrgXUsr.xhtml
@@ -15,7 +15,7 @@ and open the template in the editor.
     <ui:insert name="crgxusr">
         <ace:panel header="Usuarios" rendered="#{!usuarioJSFBean.blnMostrarPanel}">
             <ace:dataTable value="#{usuarioJSFBean.lstTablaAdmColXEmp}"
-                           var="item"
+                           var="itemTColXEmp"
                            rows="10"
                            paginator="true"
                            emptyMessage="No se encontraron registros"
@@ -26,36 +26,36 @@ and open the template in the editor.
                 <ace:column headerText=">>>" style="width: 50px">
                     <h:commandLink value=">>>"
                                    actionListener="#{usuarioJSFBean.rowDtColXEmp_ActionEvent}">
-                        <f:attribute name="tcxe" value="#{item}"/>
+                        <f:attribute name="tcxe" value="#{itemTColXEmp}"/>
                     </h:commandLink>
                 </ace:column>
                 <ace:column  style="width: 50px">
                     <f:facet name="header">
                         <h:panelGroup>
                             <h:outputText value="Tipo doc"/>
-                            <ace:textEntry value=""/>
+
                         </h:panelGroup>
                     </f:facet>
-                    <h:outputText value="#{item.admColxemp.colCedula.tdcId.tdcId}"/>
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.tdcId.tdcId}"/>
                 </ace:column>
                 <ace:column headerText="Documento" style="width: 100px">
-                    <h:outputText value="#{item.admColxemp.colCedula.colCedula}"
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.colCedula}"
                                   styleClass="textcolumleft"/>
                 </ace:column>
                 <ace:column headerText="Primer nombre" style="width: 100px">
-                    <h:outputText value="#{item.admColxemp.colCedula.colNombre1}"
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.colNombre1}"
                                   styleClass="textcolumleft"/>
                 </ace:column>
                 <ace:column headerText="Segundo nombre" style="width: 100px">
-                    <h:outputText value="#{item.admColxemp.colCedula.colNombre2}"
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.colNombre2}"
                                   styleClass="textcolumleft"/>
                 </ace:column>
                 <ace:column headerText="Primer apellido" style="width: 100px">
-                    <h:outputText value="#{item.admColxemp.colCedula.colApellido1}"
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.colApellido1}"
                                   styleClass="textcolumleft"/>
                 </ace:column>
                 <ace:column headerText="Segundo apellido" style="width: 100px">
-                    <h:outputText value="#{item.admColxemp.colCedula.colApellido2}"
+                    <h:outputText value="#{itemTColXEmp.admColxemp.colCedula.colApellido2}"
                                   styleClass="textcolumleft"/>
                 </ace:column>
             </ace:dataTable>
@@ -70,7 +70,7 @@ and open the template in the editor.
                               style="font-size: 14px;font-weight: bold"/>
             </h:panelGrid>
             <h:panelGrid columns="2" styleClass="tablaAlnVer">
-                <h:panelGroup id="pnlgTablaCargo">
+                <h:panelGroup >
                     <h:outputLabel value="CARGOS" dir="top"
                                    style="font-size: 12px;font-weight: bold"/>
                     <ace:dataTable value="#{usuarioJSFBean.lstTablaAdmCargo}"
@@ -92,10 +92,22 @@ and open the template in the editor.
                             <h:outputText value="#{itemCrg.admCargo.crgNombre}"
                                           styleClass="textcolumleft"/>
                         </ace:column>
+                        <ace:column headerText="Tipo" style="width: 300px">
+                            <h:outputText value="#{itemCrg.admCargo.crgTipo}"
+                                          styleClass="textcolumleft"/>
+                        </ace:column>
+                        <ace:column headerText="Comision" style="width: 300px">
+                            <h:selectBooleanCheckbox value="#{itemCrg.admCargo.crgAplicaComision}"
+                                                     styleClass="textcolumleft"/>
+                        </ace:column>
+                        <ace:column headerText="Estado" style="width: 300px">
+                            <h:selectBooleanCheckbox value="#{itemCrg.admCargo.crgEst}"
+                                                     styleClass="textcolumleft"/>
+                        </ace:column>
                     </ace:dataTable>
                 </h:panelGroup>
                 <h:panelGroup id="pnlgTablaCrgXUsr">
-                    <h:outputLabel value="CARGOS ASIGNADOS" dir="top"
+                    <h:outputLabel value="CARGOS ASIGNADOS" 
                                    style="font-size: 12px;font-weight: bold"/>
                     <ace:dataTable value="#{usuarioJSFBean.lstTablaAdmCrgXCol}"
                                    var="itemCxc"
@@ -106,11 +118,7 @@ and open the template in the editor.
                                    paginatorAlwaysVisible="true"
                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
                                    currentPageReportTemplate="({startRecord} - {endRecord} de {totalRecords}, Página: {currentPage}/{totalPages})">
-                        <!--
-                        <ace:column headerText="" style="width: 50px">
-                            <h:selectBooleanCheckbox value="#{itemCxc.seleccionado}"/>
-                        </ace:column>
-                        -->
+
                         <ace:column headerText="Código" style="width: 100px">
                             <h:outputText value="#{itemCxc.admCrgxcol.crgId.crgId}"
                                           styleClass="letraConTabla"/>
