--- a/siereweb/web/modulos/param/usr/panelUsuario.xhtml
+++ b/siereweb/web/modulos/param/usr/panelUsuario.xhtml
@@ -53,6 +53,15 @@ and open the template in the editor.
                                styleClass="textMediano">
                     <f:converter converterId="convertMayusc"/>
                 </ace:textEntry>
+                <h:outputLabel value="Fecha nacimiento"/>
+                <ace:dateTimeEntry value="#{usuarioJSFBean.fechaNacimiento}"  
+                                   renderAsPopup="true"
+                                   styleClass="inputs"
+                                   pattern="dd/MM/yyyy">
+                    <f:convertDateTime pattern="dd/MM/yyyy" timeZone="GMT-5"/>
+                    <ace:ajax execute="@this" render="@this"/>
+                </ace:dateTimeEntry>
+
                 <h:outputLabel value="Dirección *"/>
                 <ace:textEntry value="#{usuarioJSFBean.strColDireccion}"
                                styleClass="textMediano">
