--- a/siereweb/web/modulos/param/usr/panelCrgXUsr.xhtml
+++ b/siereweb/web/modulos/param/usr/panelCrgXUsr.xhtml
@@ -118,7 +118,9 @@ and open the template in the editor.
                                    paginatorAlwaysVisible="true"
                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
                                    currentPageReportTemplate="({startRecord} - {endRecord} de {totalRecords}, Página: {currentPage}/{totalPages})">
-
+                        <ace:column headerText="" style="width: 50px">
+                            <h:selectBooleanCheckbox value="#{itemCxc.seleccionado}"/>
+                        </ace:column>
                         <ace:column headerText="Código" style="width: 100px">
                             <h:outputText value="#{itemCxc.admCrgxcol.crgId.crgId}"
                                           styleClass="letraConTabla"/>
@@ -128,7 +130,7 @@ and open the template in the editor.
                                           styleClass="letraConTabla"/>
                         </ace:column>
                         <ace:column headerText="Estado" style="width: 50px">
-                            <h:selectBooleanCheckbox value="#{itemCxc.admCrgxcol.cxcEst}"/>
+                            <h:selectBooleanCheckbox value="#{itemCxc.admCrgxcol.cxcEst}" readonly="true"/>
                         </ace:column>
                     </ace:dataTable>
                 </h:panelGroup>
