Corregir error módulo administrativo.

--- a/siereweb/web/modulos/consulta/pcs/ctn/panelPcsCtnCliente.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/ctn/panelPcsCtnCliente.xhtml
@@ -260,7 +260,7 @@ and open the template in the editor.
                 <tr><th  class="thtablaFormulario" colspan="4"> #{pcsCotizacionJSFBean.esNit ? 'Agregar Nuevo Contacto' : 'Homenajeado'}</th></tr>
                 <tr>
                     <td><div >
-                            <label>Razón soclial *</label>
+                            <label>Nombres *</label>
                         </div>
                     </td>
                     <td colspan="3">
